<resources>
    <string name="app_name">Calculadora</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_2">2</string>
    <string name="button_1">1</string>
    <string name="button_3">3</string>
    <string name="button_0">0</string>
    <string name="button_coma">,</string>
    <string name="button_igual">=</string>
    <string name="button_suma">+</string>
    <string name="button_resta">-</string>
    <string name="button_multiplicacion">X</string>
    <string name="button_division">/</string>
    <string name="button_AC">AC</string>
    <string name="pantalla">0.0</string>
</resources>